home-assistant/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: traefik
      namespace: default
      sectionName: websecure
  hostnames:
    - home-assistant.burau.dev
  rules:
    - backendRefs:
        - name: home-assistant
          port: 80
